2018-05-30  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1067
	
	* controlfiles/*:  Updating Zeeman checks for an upcoming change 
	internally necessary for saving memory.  Matches the lineshapes
	tests (I will add jacobian testing to these eventually)

2018-05-31  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1066

	* src/linefunctions.cc (Linefunctions::SingleLevelLineData::htp_dz1dt,
	Linefunctions::SingleLevelLineData::htp_dBdt):

	Use float literal instead of int when multiplying with a complex
	number. Fixes compilation with Intel compiler which can otherwise not
	decide whether it should cast the int to float or double.

2018-05-30  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1065
	
	Testing to update numbers using non-native setup
	(If this does work, there is something wrong with
	my computer for Native build settings since Native
	build settings works for Oliver.)

2018-05-30  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1064
	
	Forgot controlfiles

2018-05-30  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1063
	
	* controlfiles/*: Added more lineshape tests so there is hopefully
	less bitrot in future.  Also lowered relateive differences expected
	for the derivatives because it failed at different compiler settings
	
	* src/linefunctions.cc: Same fix for Lorentz, Doppler, HTP as
	for Voigt in a previous commit.  Also changed so VMR is considered
	a line parameter because it behaves exactly as pressure broadening.
	This reduces errors in partial derivatives from ~VMR to near
	numerical noise.  There is likely still some error remaining in this
	treatment because there are still some systematic errors, though these 
	are much smaller than before...
	
	* src/linescaling.cc:  Fixed error in dstimulated_relative_emission_dF0
	which reduced errors for central line frequencies derivatives by a lot
	
	* src/pressurebroadeningdata.cc:  Made VMR part of the pressure 