@@ -285,18 +285,11 @@ else (CMAKE_GENERATOR STREQUAL "Xcode")
   ARTS_ADD_COMPILER_FLAG (Wno-strict-overflow)
 endif (CMAKE_GENERATOR STREQUAL "Xcode")
 
-#     ARTS_ADD_COMPILER_FLAG (flto)
-#     ARTS_ADD_COMPILER_FLAG (-fuse-linker-plugin)
-#     set(CMAKE_AR "gcc-ar")
-#     set(CMAKE_RANLIB "gcc-ranlib")
+
 if(CMAKE_BUILD_TYPE STREQUAL "Native")
     ARTS_ADD_COMPILER_FLAG (O3)
     ARTS_ADD_COMPILER_FLAG (march=native)
     ARTS_ADD_COMPILER_FLAG (fcx-fortran-rules)
-    ARTS_ADD_COMPILER_FLAG (flto)
-    ARTS_ADD_COMPILER_FLAG (-fuse-linker-plugin)
-    set(CMAKE_AR "gcc-ar")
-    set(CMAKE_RANLIB "gcc-ranlib")
 endif ()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Intel")
